# thesis-work

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .rtx.toml  404.html  Makefile  README.md  docker-compose.yaml  docker-compose_gpu.yaml  index.html  pyproject.toml  sitemap.xml
.github/workflows/: build.yaml  test.yaml
dagster_pipelines/: __init__.py
dagster_pipelines/assets/: __init__.py
dagster_pipelines/assets/chemberta/: data.py  model.py
dagster_pipelines/assets/playground/: playground.py  pythonic_config.py
dagster_pipelines/jobs/: finetune.py  train.py
dagster_pipelines/resources/: wandb.py
data/ataberk/chembl27-with-decoys/smiles/: CHEMBL1947_actives_decoys.csv  CHEMBL5147_actives_decoys.csv
data/ataberk/chembl27/smiles/: thb.csv
data/ataberk/dude/smiles/: abl1.csv  reni.csv  thb.csv
data/original/: ionchannel.csv  transporter.csv
data/protein_family/: gpcr.csv  kinase.csv  nuclearreceptor.csv  protease.csv
data/related_work/bioactive/: README.md
data/related_work/unbiased/: README.md
docker/: Dockerfile  Dockerfile_gpu  Dockerfile_simple
docs/: index.md  reference.md
experiments/: generic.ipynb  generic.py  generic_loop.py
explanation/: index.html
how-to-guides/: index.html
models/chemprop/multi_task_subfamily_dmpnn_25/: args.json  test_scores.csv
models/chemprop/multi_task_subfamily_dmpnn_25/fold_0/model_0/: events.out.tfevents.1614890775.b1b7bc81b28d  model.pt
notebooks/: Mapping_Chemical_Space_with_UMAP.ipynb  ataberk_data_process.ipynb  bert_smiles_vector.ipynb  chemberta_clustering.ipynb  clustering.ipynb  clustering_class.ipynb  clustering_gpu_cpu.ipynb  cpu_vs_gpu.ipynb  deepchem.ipynb  dimensionality_reduction.ipynb  distance_matrix.ipynb  ecfp4_clustering.ipynb  leidenalg_analysis.ipynb  molecule_visualization.ipynb  predicting-molecule-properties-based-on-its-smiles.ipynb  simpletransformers.ipynb  test.ipynb  thesis_figures.ipynb  wandb_test.ipynb
notebooks/ChemBERTa/: ChemBERTa_finetune.ipynb
poetry/: index.html
reference/: index.html
tests/: test_placeholder.py
thesis_work/: __init__.py  clustering.py  data.py  placeholder.py  utils.py
thesis_work/chemberta/: finetune.py  model_descriptors.py  molnet_dataloader.py  utils.py
thesis_work/chemprop/: model.py  model_descriptors.py
thesis_work/clustering/: agglomerative.py  butina.py  dbscan.py  dimensionality_reduction.py  evaluation.py  k_means.py  leidenalg.py  runner.py  utils.py
thesis_work/cv/: evaluation_metrics.py  split.py  train_test_5fold.py
thesis_work/gui/: __init__.py  index.py  molecule_visulation.py
thesis_work/gui/pages/: 01_Molecule_Visualization.py  01_Molecule_Visulation.py  02_Clustering.py
thesis_work/molbert/: model_descriptors.py
thesis_work/utils/: data.py  initialization.py  utils.py  wandb_api.py
tutorials/: index.html
